--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,11 +18,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
-body {
+html, body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100%;
 }
 /* background color
 00293B prussian blue
@@ -69,6 +74,7 @@ FFD399 sunset
   border: none;
   outline: none;
   padding: 0.5rem;
+  font-size: em ;
 }
 
 .menu-button:focus {
