--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,8 +26,9 @@
 
 html, body {
   margin: 0;
-  min-width: 320px;
+  width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 /* background color
 00293B prussian blue
@@ -122,4 +123,8 @@ button:focus-visible {
 navbar {
   margin-top: 0;
   width: 100%;
-} 
+}
+
+.carousel {
+  
+}
